modified:   14. Defining Classes/Access Levels and Other Modifiers.ipynb

--- a/14. Defining Classes/Access Levels and Other Modifiers.ipynb
+++ b/14. Defining Classes/Access Levels and Other Modifiers.ipynb
@@ -1507,6 +1507,160 @@
     "1. Constants where the values are extracted during the **compilation** of the program (**compile-time** constants).\n",
     "2. Constants where the values are extracted during the **execution** of the program (**run-time** constants)."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Compile-Time Constants"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "**Constants** which are calculated at **compile time** are declared using the   `const` modifier, as generalized below:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "```c#\n",
+    "[access_modifiers] const constantType constantName;\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Observe that, although the **constants** declared with a `const` modifier are static fields, they *must not* and *cannot* use the `static` modifier in their declaration."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Suppose we declare and initialize a **contsant** to represent $\\Large{\\pi}$.    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public const double PI = 3.141592653589793;"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Once declared and initialized, any attempt to modify the **constant** `PI` will result in an error:  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "(1,1): error CS0131: The left-hand side of an assignment must be a variable, property or indexer",
+     "output_type": "error",
+     "traceback": [
+      "(1,1): error CS0131: The left-hand side of an assignment must be a variable, property or indexer"
+     ]
+    }
+   ],
+   "source": [
+    "PI += 1;"
+   ]
   }
  ],
  "metadata": {
