modified:   14. Defining Classes/Access Levels and Other Modifiers.ipynb

--- a/14. Defining Classes/Access Levels and Other Modifiers.ipynb
+++ b/14. Defining Classes/Access Levels and Other Modifiers.ipynb
@@ -1858,6 +1858,53 @@
    "source": [
     "PI_OVER_TWO"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Lastly, **constants** declared with the `const` modifier must conform to one of the following types: \n",
+    "- primitive\n",
+    "  - `sbyte`\n",
+    "  - `byte`\n",
+    "  - `short`\n",
+    "  - `ushort`\n",
+    "  - `int`\n",
+    "  - `uint`\n",
+    "  - `long`\n",
+    "  - `ulong`\n",
+    "  - `char`\n",
+    "  - `float`\n",
+    "  - `double`\n",
+    "  - `decimal`\n",
+    "  - `bool`\n",
+    "- enumeration\n",
+    "- reference \n",
+    "  - must be either a `string`, or else hold a `null` value"
+   ]
   }
  ],
  "metadata": {
