modified:   14. Defining Classes/Access Levels and Other Modifiers.ipynb

--- a/14. Defining Classes/Access Levels and Other Modifiers.ipynb
+++ b/14. Defining Classes/Access Levels and Other Modifiers.ipynb
@@ -1905,6 +1905,214 @@
     "- reference \n",
     "  - must be either a `string`, or else hold a `null` value"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Runtime Constants"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "When we want to declare **reference type constants**, which cannot be calculated during compilation of the program, instead of the `const` modifier, we must use a **combination of** `static` **and** `readonly` **modifiers**, as shown below:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "```c#\n",
+    "[access_modifiers] static readonly referenceType referenceName;\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Suppose we have declared the following `RGBColor` `class`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public class RGBColor\n",
+    "{\n",
+    "\n",
+    "    // Field Definitions\n",
+    "    public int red,\n",
+    "               green,\n",
+    "               blue;\n",
+    "\n",
+    "\n",
+    "    // Construtor\n",
+    "    public RGBColor( int red, int blue, int green )\n",
+    "    {\n",
+    "        this.red   = red;\n",
+    "        this.blue  = blue;\n",
+    "        this.green = green;\n",
+    "    }\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Since the `RGBColor` `class` is a **reference type**, but is neither a `string`, or `null`, in order to declare a **constant** based on it, it must be done using the `static` and `readonly` keywords.   \n",
+    "    \n",
+    "In other words, it needs to be done during **runtime**, rather than **compilation time**, as shown below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public static readonly RGBColor BLACK = new RGBColor( 0, 0, 0 );"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "The RGB values for the color black are: (0,0,0)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "$\"The RGB values for the color black are: ({BLACK.red},{BLACK.green},{BLACK.blue})\""
+   ]
   }
  ],
  "metadata": {
