modified:   14. Defining Classes/Modifiers/static, sealed, partial, const, and readonly.ipynb

--- a/14. Defining Classes/Modifiers/static, sealed, partial, const, and readonly.ipynb
+++ b/14. Defining Classes/Modifiers/static, sealed, partial, const, and readonly.ipynb
@@ -28,7 +28,7 @@
    },
    "source": [
     "## Modifiers\n",
-    "### static, sealed, partial, const, and readonly\n",
+    "### `static`, `sealed`, `partial`, `const`, and `readonly`\n",
     "---"
    ]
   },
