modified:   14. Defining Classes/Modifiers/Access Levels.ipynb

--- a/14. Defining Classes/Modifiers/Access Levels.ipynb
+++ b/14. Defining Classes/Modifiers/Access Levels.ipynb
@@ -27,23 +27,8 @@
     }
    },
    "source": [
-    "## Access Levels and Other Modifiers\n",
+    "## Access Levels\n",
     "---"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "### Access Levels"
    ]
   },
   {
