modified:   14. Defining Classes/Modifiers/static, sealed, partial, const, and readonly.ipynb

--- a/14. Defining Classes/Modifiers/static, sealed, partial, const, and readonly.ipynb
+++ b/14. Defining Classes/Modifiers/static, sealed, partial, const, and readonly.ipynb
@@ -854,7 +854,7 @@
     }
    },
    "source": [
-    "#### Compile-Time Constants"
+    "#### Compile-Time Constants (`const`)"
    ]
   },
   {
@@ -1252,7 +1252,7 @@
     }
    },
    "source": [
-    "#### Runtime Constants"
+    "#### Runtime Constants (`readonly`)"
    ]
   },
   {
