modified:   14. Defining Classes/The Anatomy of a Class.ipynb

--- a/14. Defining Classes/The Anatomy of a Class.ipynb
+++ b/14. Defining Classes/The Anatomy of a Class.ipynb
@@ -1691,6 +1691,106 @@
    "source": [
     "<br>"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### Inner Classes (Nested Classes)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "In $C\\#$ an **inner (nested) class** is called a class that is **declared inside the body of another class**.   \n",
+    "\n",
+    "Accordingly, the class that *encloses the* **inner class** is called an *outer class*."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "The main reasons to **nest** one class into another are:\n",
+    "1. To **better organize the code** when working with objects in the real world, among which have a special relationship and one cannot exist without the other.\n",
+    "2. To **hide a class in another class**, so that the inner class cannot be used outside the class wrapped it.  \n",
+    "   \n",
+    "In general, **inner classes** are used rarely, because they complicate the structure of the code and increase the nested levels."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Consider an example. Let’s make a `Car` class.   \n",
+    "\n",
+    "Each `Car` has an **engine**. However, it makes no sense if the he engine is outside the car, because without it, the car cannot run, i.e. we have acheived a concept known as $composition$.\n",
+    "\n",
+    "Therefore, if you declare the class for a `Car` it would be a good idea to create an **inner class** `Engine`, which will reflect the appropriate real-world object:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
   }
  ],
  "metadata": {
