modified:   14. Defining Classes/The Anatomy of a Class.ipynb new file:   14. Defining Classes/_img/CarDiagram.png new file:   14. Defining Classes/_img/Civic.png

--- a/14. Defining Classes/The Anatomy of a Class.ipynb
+++ b/14. Defining Classes/The Anatomy of a Class.ipynb
@@ -1770,11 +1770,184 @@
     }
    },
    "source": [
-    "Consider an example. Let’s make a `Car` class.   \n",
-    "\n",
+    "Consider an example. Let’s make a `Car` class.   "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<img src=\"_img/CarDiagram.png\" style=\"width: 800px; display: block; margin: auto\"></img>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
     "Each `Car` has an **engine**. However, it makes no sense if the he engine is outside the car, because without it, the car cannot run, i.e. we have acheived a concept known as $composition$.\n",
     "\n",
     "Therefore, if you declare the class for a `Car` it would be a good idea to create an **inner class** `Engine`, which will reflect the appropriate real-world object:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public class Car\n",
+    "{\n",
+    "\n",
+    "    // Property definition of an Engine\n",
+    "    public Motor Engine;\n",
+    "\n",
+    "\n",
+    "    // Constructor\n",
+    "    public Car()\n",
+    "    {\n",
+    "\n",
+    "        // utilizes the nested Motor class to define the Engine property\n",
+    "        this.Engine = new Motor( 2000 );\n",
+    "\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "    // Nested Motor Class\n",
+    "    public class Motor\n",
+    "    {\n",
+    "\n",
+    "        // Property definition of Horse Power\n",
+    "        public int HorsePower;\n",
+    "\n",
+    "\n",
+    "        // Constructor\n",
+    "        public Motor( int horsePower )\n",
+    "        {\n",
+    "            this.HorsePower = horsePower;\n",
+    "        }\n",
+    "\n",
+    "    }\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "We may now instantiate a new object to represent any specific real-world Car, like this Honda Civic, for example:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<img src=\"_img/Civic.png\" style=\"width: 800px; display: block; margin: auto\"></img>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "Car hondaCivic = new Car();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th>HorsePower</th></tr></thead><tbody><tr><td><div class=\"dni-plaintext\"><pre>2000</pre></div></td></tr></tbody></table>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "hondaCivic.Engine"
    ]
   },
   {
