modified:   14. Defining Classes/The Anatomy of a Class.ipynb

--- a/14. Defining Classes/The Anatomy of a Class.ipynb
+++ b/14. Defining Classes/The Anatomy of a Class.ipynb
@@ -1800,9 +1800,9 @@
     }
    },
    "source": [
-    "Each `Car` has an **engine**. However, it makes no sense if the he engine is outside the car, because without it, the car cannot run, i.e. we have acheived a concept known as $composition$.\n",
+    "Each `Car` has an **motor**. However, it makes no sense if the the motor is outside the car, because without it, the car cannot run, i.e. we have acheived a concept known as $composition$.\n",
     "\n",
-    "Therefore, if you declare the class for a `Car` it would be a good idea to create an **inner class** `Engine`, which will reflect the appropriate real-world object:"
+    "Therefore, if you declare the class for a `Car` it would be a good idea to create an **inner class** `Motor`, which will reflect the appropriate real-world object:"
    ]
   },
   {
