modified:   14. Defining Classes/Structures, Enumerations, and Generics.ipynb

--- a/14. Defining Classes/Structures, Enumerations, and Generics.ipynb
+++ b/14. Defining Classes/Structures, Enumerations, and Generics.ipynb
@@ -363,6 +363,74 @@
    "source": [
     "point2D"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Should I Use a Class or a Structure?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Use **structures** to hold **simple data structures** consisting of few fields that come together.    \n",
+    "Examples are **coordinates**, **sizes**, **locations**, **colors**, etc. \n",
+    "**Structures** are **not supposed to have functionality inside** (no methods except simple ones like `ToString()` and comparators).        \n",
+    "Use **structures** for small data structures consisting of set of fields that should be **passed by value**."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Use *classes* for *more complex scenarios* where you combine data and programming logic.      \n",
+    "*If you have logic, use a class.*    \n",
+    "If you have *more than few simple fields*, use a *class*.    \n",
+    "If you n*eed to pass variables by reference*, use a *class*.   \n",
+    "If you need to assign a `null` value, prefer using a *class*.   \n",
+    "If you prefer working with a *reference type*, use a *class*."
+   ]
   }
  ],
  "metadata": {
