renamed:    14. Defining Classes/Structures, Enumerations, and Generics.ipynb -> 14. Defining Classes/Structures and Enumerations.ipynb

--- a/14. Defining Classes/Structures and Enumerations.ipynb
+++ b/14. Defining Classes/Structures and Enumerations.ipynb
@@ -27,7 +27,7 @@
     }
    },
    "source": [
-    "## Structures, Enumerations, and Generics\n",
+    "## Structures and Enumerations\n",
     "---"
    ]
   },
